[package]
name = "borealis-consumer-lib"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
# rust-version = "1.58.1"
description = "Library for creating NATS consumers for Borealis Bus, NATS based service-oriented bus (MOM/MQ)."
homepage = "https://github.com/aurora-is-near/borealis.rs"
repository = "https://github.com/aurora-is-near/borealis.rs"
license = "GPLv3"
# license-file = "LICENSE"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
near-indexer = { git = "ssh://git@github.com/aurora-is-near/borealis-indexer.git", rev = "0b0a3dbe457bdf750813c8aa01045c448d4c4687" }
borealis-types = { path = "../borealis-types" }
nats = "0.16.0"

clap = "3.0.0-beta.1"
openssl-probe = "0.1.2"

actix = "=0.11.0-beta.2"
tokio = { version = "1.1", features = ["sync"] }

tracing = "0.1.13"
tracing-subscriber = "0.2.4"

# serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
serde_cbor = "0.11.2"

rand = "0.8.4"

[dev-dependencies]

[build-dependencies]

[target]

[features]

