[package]
name = "borealis-indexer-lib"
version = "0.10.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
# rust-version = "1.60.0"
description = "Borealis Indexer's Library for creating NEAR indexers and archival nodes."
homepage = "https://github.com/aurora-is-near/borealis.rs"
repository = "https://github.com/aurora-is-near/borealis.rs"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
near-indexer = { path = "../near-indexer" }
borealis-producer-lib = { path = "../borealis-producer-lib" }
borealis-types = { path = "../borealis-types" }
nats = "0.16.0"

actix = "0.13.0"
tokio = { version = "1.18.0", features = ["sync", "time"] }
tokio-stream = { version = "0.1.8" }
futures = "0.3.5"
anyhow = "1.0.43"
async-trait = "0.1.52"

tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
serde_cbor = "0.11.2"

[dev-dependencies]

[build-dependencies]

[target]

[features]
