[package]
name = "borealis-producer-lib"
version = "0.10.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
# rust-version = "1.60.0"
description = "Borealis Producer's Library for creating NATS producers for Borealis Bus, NATS based service-oriented bus (MOM/MQ)."
homepage = "https://github.com/aurora-is-near/borealis.rs"
repository = "https://github.com/aurora-is-near/borealis.rs"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
borealis-types = { path = "../borealis-types" }
nats = "0.16.0"

tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = [ "derive" ] }

rand = "0.8.4"

[dev-dependencies]

[build-dependencies]

[target]

[features]
