[package]
name = "borealis-types"
version = "0.10.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
# rust-version = "1.60.0"
description = "Definition of message types (`BorealisMessage` and `StreamerMessage`), sent over the wire by the Borealis Indexer (producer for the Borealis NATS Bus), and implementation of methods to encode and decode messages of these types."
homepage = "https://github.com/aurora-is-near/borealis.rs"
repository = "https://github.com/aurora-is-near/borealis.rs"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
near-primitives = { git = "https://github.com/near/nearcore", rev = "d92234c2f915465ab7319768044cd6edee576a31" }
# near-primitives = { git = "https://github.com/near/nearcore", branch = "master" }
# near-primitives = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.2" }

serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
serde_cbor = "0.11.2"

lzzzz = "1.0.3"

zstd = "0.10.2+zstd.1.5.2"

rand = "0.8.4"

[dev-dependencies]

[build-dependencies]

[target]

[features]
