[package]
name = "near-indexer"
version = "0.9.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
# rust-version = "1.60.0"
publish = false

[dependencies]
actix = "0.13.0"
anyhow = "1.0.51"
async-recursion = "0.3.2"
tracing = "0.1.13"
futures = "0.3.5"
rocksdb = { version = "0.18.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0.55"
tokio = { version = "1.18.0", features = ["time", "sync"] }

borealis-types = { path = "../borealis-types" }

nearcore = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.1" }
near-client = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.1" }
near-chain-configs = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.1" }
near-crypto = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.1" }
near-primitives = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.1" }
node-runtime = { git = "https://github.com/near/nearcore", tag = "1.26.0-rc.1" }
